kubernetes/workloads/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita-service
  namespace: media
spec:
  selector:
    app: kavita
  ports:
    - port: 5000
      targetPort: http
